scripts/nullness/original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8.txt
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Scenario.java:31: error: [assignment] incompatible types in assignment.
	private String _name = null;
	                       ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Side.java:185: error: [return] incompatible types in return.
		return (!_players.isEmpty()) ? _players.get(name) : null;
		                             ^
  type of expression: @Initialized @Nullable Player
  method return type: @Initialized @NonNull Player
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:40: error: [assignment] incompatible types in assignment.
	private Unit _unit = null;
	                     ^
  found   : null (NullType)
  required: @Initialized @NonNull Unit
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:118: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _portagedItems, _subStacks, _positionLabel
	public Stack(Unit unit,int unitID,int stackID)
	       ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:184: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _portagedItems, _subStacks, _positionLabel
	public Stack(Stack stack)
	       ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:196: error: [method.invocation] call to setPositionLabel(java.lang.String) not allowed on the given receiver.
		setPositionLabel(stack.positionLabel());
		                ^
  found   : @UnderInitialization @NonNull Stack
  required: @Initialized @NonNull Stack
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:198: error: [method.invocation] call to addSubStack(jasl.ui.data.Stack) not allowed on the given receiver.
		addSubStack(stack);
		           ^
  found   : @UnderInitialization @NonNull Stack
  required: @Initialized @NonNull Stack
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:264: error: [dereference.of.nullable] dereference of possibly-null reference _subStacks.get(_subStacks.keySet().toArray()[0])
			return _subStacks.get(_subStacks.keySet().toArray()[0]).toString();
			                     ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:267: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull String
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:369: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Map<@Initialized @NonNull Integer, @Initialized @NonNull Stack>
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:401: error: [return] incompatible types in return.
		return null;
		       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull Map<@Initialized @NonNull Integer, @Initialized @NonNull Stack>
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:462: error: [dereference.of.nullable] dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:465: error: [return] incompatible types in return.
		return subStack;
		       ^
  type of expression: @Initialized @Nullable Stack
  method return type: @Initialized @NonNull Stack
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:521: error: [dereference.of.nullable] dereference of possibly-null reference subStack
			subStack.setPositionLabel(_positionLabel);
			^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:524: error: [return] incompatible types in return.
		return subStack;
		       ^
  type of expression: @Initialized @Nullable Stack
  method return type: @Initialized @NonNull Stack
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Stack.java:594: error: [argument] incompatible argument for parameter positionLabel of Stack.setPositionLabel.
		stack.setPositionLabel(null); // Specifying null makes it empty.
		                       ^
  found   : null (NullType)
  required: @Initialized @NonNull String
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/counters/Unit.java:73: error: [initialization.fields.uninitialized] the constructor does not initialize fields: _description
	protected Unit() {}
	          ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:43: error: [assignment] incompatible types in assignment.
	private static Game _game = null;
	                            ^
  found   : null (NullType)
  required: @Initialized @NonNull Game
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:87: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
		    _sides.get(side).addPlayer(name,nationality,entryTurn))
		              ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:92: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
			list.addAll(_sides.get(side).playerList());
			                      ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:108: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(side)
		return _sides.get(side).player(name);
		                 ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:119: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(Side.Sides.ALLIES)
		_alliedPlayers.addAll(_sides.get(Side.Sides.ALLIES).playerList());
		                                ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/ui/data/Game.java:122: error: [dereference.of.nullable] dereference of possibly-null reference _sides.get(Side.Sides.AXIS)
		_axisPlayers.addAll(_sides.get(Side.Sides.AXIS).playerList());
		                              ^
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/jasl/utilities/Serialization.java:138: error: [return] incompatible types in return.
		return object;
		       ^
  type of expression: @Initialized @Nullable Object
  method return type: @Initialized @NonNull Object
../original/urlb3290c8e9e_craigonic_jasl_tgz-pJ8-DriverJ8/src/Driver.java:179: error: [argument] incompatible argument for parameter newIdentity of Fighting.setIdentity.
            squadObject.setIdentity(null);
                                    ^
  found   : null (NullType)
  required: @Initialized @NonNull String
25 errors
